--- a/app/src/main/res/drawable/test.xml
+++ b/app/src/main/res/drawable/test.xml
@@ -11,7 +11,7 @@
         android:left="0dp"
         android:right="0dp"
         android:top="0dp" />
-    <stroke
-        android:width="0.5dp" />
+ <!--   <stroke
+        android:width="0.5dp" />-->
     <solid android:color="@color/white" />
 </shape>
