--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -69,7 +69,7 @@
         app:layout_constraintStart_toStartOf="@+id/item_user_name"
         app:layout_constraintTop_toBottomOf="@+id/item_user_name" />
 
-    <Button
+    <!--<Button
         android:id="@+id/buttonUpdate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -89,7 +89,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/buttonUpdate"
         app:layout_constraintTop_toTopOf="parent" />
-
+-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
