--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -48,15 +48,26 @@
 
     <!--NonSwipeableViewPager-->
 
-    <com.example.easystock.utils.NonSwipeableViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/checkout_ViewPager"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="2dp"
-        app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/topGuideLine" />
+        app:layout_constraintTop_toTopOf="@+id/topGuideLine"
+        app:layout_constraintVertical_chainStyle="packed">
+
+    </androidx.viewpager.widget.ViewPager>
+
+<!--    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/checkout_tab_layout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/checkout_ViewPager" />-->
 
     <!--        <androidx.viewpager.widget.ViewPager
                 android:id="@+id/checkout_ViewPager"
