--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -62,6 +62,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
+        android:imeActionLabel="Ingresar"
+        android:imeOptions="actionGo"
+        android:maxLines="1"
+        android:inputType="textPassword"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="@+id/spinnerCardView"
         app:layout_constraintStart_toStartOf="@+id/spinnerCardView"
